--- a/index.html
+++ b/index.html
@@ -35,6 +35,38 @@
             </div>
         </div>
     </nav>
+    <section id="profile">
+        <div class="section__pic-container">
+            <img src="./assets/placeholder.jpg" alt="profile picture" width="350px" height="350px">
+        </div>
+        <div class="section__text">
+            <p class="section__text__p1">Hello, I'm</p>
+            <h1 class="title">Nart Spahija</h1>
+            <p class="section__text__p2">Front-end Developer</p>
+            <div class="btn-container">
+                <button class="btn btn-color-2" onclick="window.open('./assets/nartscv.pdf')">Download my CV</button>
+                <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact me</button>
+            </div>
+            <div id="socials-container">
+                <img src="./assets/linkedin.png" alt="Linkedin Profile" class="icon" onclick="location.href='https://www.linkedin.com/in/nart-spahija/'">
+                <img src="./assets/github.png" alt="Github Profile" class="icon" onclick="location.href='https://github.com/NartSpahija'">
+            </div>
+        </div>
+    </section>
+    <section id="about">
+        <p class="section__text__p1">Know more</p>
+        <h1 class="title">About Me</h1>
+        <div class="section-container">
+            <div class="section__pic-container">
+                <img src="./assets/placeholder.jpg" alt="Profile Picture" class="about-pic">
+                <div class="about-containers">
+                    <div class="details-container">
+                        <img src="./assets/placeholder.jpg" alt="Experience icon" class="icon">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
