--- a/index.html
+++ b/index.html
@@ -54,18 +54,133 @@
         </div>
     </section>
     <section id="about">
-        <p class="section__text__p1">Know more</p>
+        <p class="section__text__p1">Get to know more</p>
         <h1 class="title">About Me</h1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="./assets/placeholder.jpg" alt="Profile Picture" class="about-pic">
+                <img
+                    src="./assets/placeholder.jpg" 
+                    alt="Profile Picture" 
+                    class="about-pic"
+                />
+            </div>
+            <div class="about-details-containers">
                 <div class="about-containers">
                     <div class="details-container">
-                        <img src="./assets/placeholder.jpg" alt="Experience icon" class="icon">
+                    <img
+                        src="./assets/skills.png" 
+                        alt="Experience icon" 
+                        class="icon"
+                    />
+                    <h3>Experience</h3>
+                    <p>6+ months<br><b>Front-end Development</b></p>
+                </div>
+                <div class="details-container">
+                    <img 
+                        src="./assets/education.jpg" 
+                        alt="Education icon" 
+                        class="icon"
+                    />
+                    <h3>Education</h3>
+                    <p>B.Sc Bachelors<br><b>Computer Sciences</b></p>
+                </div>
+            </div>
+        <div class="text-container">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                Doloribus error consequuntur rem quam. 
+                Maxime rerum dolore magnam accusantium nulla vero, quis sit earum dolorem, itaque error, soluta laborum temporibus architecto.
+            </p>
+        </div>
+    <img src="./assets/arrow.png" alt="arrow" class="icon arrow" onclick="location.href='./#experience'"/>
+    </section>
+    <section id="experience">
+        <p class="section__text__p1">Explore my</p>
+        <h1 class="title">Experience</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Front-end Development</h2>
+                    <div class="article-container">
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Checkmark" class="icon">
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Checkmark" class="icon">
+                            <div>
+                                <h3>CSS</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Checkmark" class="icon">
+                            <div>
+                                <h3>SASS</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Checkmark" class="icon">
+                            <div>
+                                <h3>JavaScript</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Checkmark" class="icon">
+                            <div>
+                                <h3>ReactJS</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Back-end Development</h2>
+                    <div class="article-container">
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Checkmark" class="icon">
+                            <div>
+                                <h3>Python</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Checkmark" class="icon">
+                            <div>
+                                <h3>MongoDB</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Checkmark" class="icon">
+                            <div>
+                                <h3>Node JS</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Checkmark" class="icon">
+                            <div>
+                                <h3>Express JS</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Checkmark" class="icon">
+                            <div>
+                                <h3>Git</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
                     </div>
                 </div>
             </div>
         </div>
+        <img src="./assets/arrow.png" alt="arrow" class="icon arrow" onclick="location.href='./#projects'"/>
     </section>
     <script src="script.js"></script>
 </body>
