--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/placeholder.jpg" alt="profile picture" width="350px" height="350px">
+            <img src="./assets/placeholder.jpg" alt="profile picture" width="350px" height="350px" id="profile-photo">
         </div>
         <div class="section__text">
-            <p class="section__text__p1">Hello, I'm</p>
+            <p class="section__text__p1">Hello, I am</p>
             <h1 class="title">Nart Spahija</h1>
             <p class="section__text__p2">Front-end Developer</p>
             <div class="btn-container">
@@ -61,7 +61,7 @@
                 <img
                     src="./assets/placeholder.jpg" 
                     alt="Profile Picture" 
-                    class="about-pic"
+                    id="profile-photo"
                 />
             </div>
             <div class="about-details-containers">
@@ -86,12 +86,13 @@
                 </div>
             </div>
         <div class="text-container">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                Doloribus error consequuntur rem quam. 
-                Maxime rerum dolore magnam accusantium nulla vero, quis sit earum dolorem, itaque error, soluta laborum temporibus architecto.
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime reiciendis incidunt, laborum repellendus officia, aperiam fugiat ex voluptatibus alias perferendis ipsa maiores est. Porro commodi recusandae tenetur dicta quam quia.
+            Repudiandae aliquid sapiente obcaecati a cumque aut inventore eum! Et dolor nihil quae praesentium saepe ipsa laboriosam ex dicta, molestiae quis quaerat earum, aperiam maxime tenetur amet at, quas assumenda.
+            Ipsam excepturi, repellat, quo beatae voluptatibus temporibus recusandae adipisci quaerat iusto repellendus tenetur hic eligendi minima cupiditate quasi distinctio, voluptate dolores est! Ea, est aliquid omnis ex assumenda unde eos?
+            Ex asperiores consequuntur eveniet animi id qui sint magni quasi reiciendis dicta? Molestiae iste sit nisi iure reprehenderit. Nostrum tempore vero recusandae omnis, eveniet nisi temporibus iste ullam illo libero!
+            Eligendi asperiores eveniet velit fugiat, eos quia. A porro itaque culpa atque labore! Commodi omnis ratione nobis dolorem sequi, id vero voluptas laborum quasi repellat corporis, fuga molestias ab incidunt.
             </p>
         </div>
-    <img src="./assets/arrow.png" alt="arrow" class="icon arrow" onclick="location.href='./#experience'"/>
     </section>
     <section id="experience">
         <p class="section__text__p1">Explore my</p>
@@ -151,7 +152,7 @@
                         <article>
                             <img src="./assets/checkmark.png" alt="Checkmark" class="icon">
                             <div>
-                                <h3>MongoDB</h3>
+                                <h3>Mongo DB</h3>
                                 <p>Basic</p>
                             </div>
                         </article>
@@ -159,13 +160,6 @@
                             <img src="./assets/checkmark.png" alt="Checkmark" class="icon">
                             <div>
                                 <h3>Node JS</h3>
-                                <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <img src="./assets/checkmark.png" alt="Checkmark" class="icon">
-                            <div>
-                                <h3>Express JS</h3>
                                 <p>Basic</p>
                             </div>
                         </article>
@@ -180,8 +174,86 @@
                 </div>
             </div>
         </div>
-        <img src="./assets/arrow.png" alt="arrow" class="icon arrow" onclick="location.href='./#projects'"/>
     </section>
+    <section id="projects">
+        <p class="section__text__p1">Browse my recent</p>
+        <h1 class="title">Projects</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img 
+                        src="./assets/project1.png" 
+                        alt="Project 1" 
+                        class="project-img"
+                        />
+                </div>
+                <h2 class="experience-sub-title project-title">Project 1</h2>
+                <div class="buton-container">
+                    <button class="btn btn-color-2 project-btn" 
+                    onclick="location.href='https://github.com/NartSpahija/simpleLoginPage'">GitHub</button>
+                </div>
+            </div>
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img
+                        src="./assets/project1.png" 
+                        alt="Project 1" 
+                        class="project-img"
+                        />
+                </div>
+                <h2 class="experience-sub-title project-title">Project 2</h2>
+                <div class="buton-container"><button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/NartSpahija/simpleLoginPage'">GitHub</button></div>
+            </div>
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img
+                        src="./assets/project1.png" 
+                        alt="Project 1" 
+                        class="project-img"
+                        />
+                </div>
+                <h2 class="experience-sub-title project-title">Project 3</h2>
+                <div class="buton-container">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/NartSpahija/simpleLoginPage'">GitHub</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    </section>
+    <section id="Contact">
+        <p class="section__text__p1">Get in touch</p>
+        <h1 class="title">Contact me</h1>
+        <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+                <img src="./assets/email.png" 
+                alt="Email icon" 
+                class="icon contact-icon"
+                />
+            <p> <a href="mailto:nartspahija@gmail.com"> nartspahija@gmail.com </a> </p>
+        </div>
+            <div class="contact-info-container">
+                <img src="./assets/linkedin.png" 
+                alt="Linkedin icon" 
+                class="icon contact-icon"
+                />
+            <p> <a href="https://www.linkedin.com/in/nart-spahija/"> Linkedin </a> </p>
+        </div>
+    </div>
+    </section>
+    <footer>
+        <nav>
+            <div class="nav-links-container">
+                    <ul class="nav-links">
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#experience">Experience</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+            </div>
+        </nav>
+        <p>Copyright &#169; 2024 Nart Spahija. All rights reserved.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
